[gd_scene load_steps=4 format=3 uid="uid://dtgs43ojd5an4"]

[ext_resource type="Script" path="res://Scenes/PlayerCharacter/PickupCollector/PickupCollector.gd" id="1_1icwb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_skodp"]
radius = 40.0

[sub_resource type="CircleShape2D" id="CircleShape2D_toes4"]
radius = 4.0

[node name="PickupCollector" type="Node2D"]
script = ExtResource("1_1icwb")
pull_area_force = 350.0
pull_max_speed = 250.0
pull_area_shape = SubResource("CircleShape2D_skodp")
collect_area_shape = SubResource("CircleShape2D_toes4")

[node name="PullArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PullArea2D"]
shape = SubResource("CircleShape2D_skodp")

[node name="CollectArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea2D"]
shape = SubResource("CircleShape2D_toes4")

[connection signal="body_entered" from="PullArea2D" to="." method="_on_pull_area_2d_body_entered"]
[connection signal="body_exited" from="PullArea2D" to="." method="_on_pull_area_2d_body_exited"]
[connection signal="body_entered" from="CollectArea2D" to="." method="_on_collect_area_2d_body_entered"]
[connection signal="body_exited" from="CollectArea2D" to="." method="_on_collect_area_2d_body_exited"]
